# Valdi

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .prettierrc.json  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bzlmod  fossa-deps.yml  package.json
apps/benchmark/: BUILD.bazel
apps/cli_example/: BUILD.bazel
apps/helloworld/: BUILD.bazel
apps/managed_context_example/: BUILD.bazel  ManagedContextExample.tsx
apps/navigation_example/: BUILD.bazel  NavigationExample.tsx  tsconfig.json
apps/valdi_gpt/: BUILD.bazel  package.json
apps/valdi_gpt/web_demo/: README.md  package.json  webpack.config.js
bzl/android/: BUILD.bazel  collect_android_assets.bzl  filter_jar.bzl  package_aar.bzl  platform_transition.bzl  zip_relative.sh
bzl/conditions/: BUILD.bazel  custom_selects.bzl  selects.bzl
bzl/constants/: BUILD.bazel
bzl/runtime_flags/: BUILD.bazel
bzl/toolchains/: BUILD.bazel  MODULE.bazel  WORKSPACE
bzl/valdi/: AndroidManifest.xml.tpl  BUILD.bazel  common.bzl  empty.c  empty.js  extract_objc_srcs.bzl  extract_swift_srcs.bzl  generate_android_manifest.bzl  localizable_strings.bzl  package.json.tmpl  rewrite_hdrs.bzl  suffixed_deps.bzl  toolchains.bzl  tsconfig.json  valdi_android_application.bzl  valdi_android_library.bzl  valdi_application.bzl  valdi_cli_application.bzl  valdi_collapse_web_paths.bzl  valdi_compiled.bzl  valdi_config.yaml.tpl  valdi_exported_library.bzl  valdi_extract_output_rule_helper.bzl  valdi_ios_application.bzl  valdi_macos_application.bzl  valdi_module.bzl  valdi_module_android_common.bzl  valdi_module_info_extractor.bzl  valdi_module_native.bzl  valdi_paths.bzl  valdi_projectsync.bzl  valdi_protodecl_to_js.bzl  valdi_run_compiler.bzl  valdi_static_resource.bzl  valdi_test.bzl  valdi_toolchain.bzl  valdi_toolchain_binary.bzl  valdi_toolchain_type.bzl
bzl/valdi/app_templates/: AndroidDebugAppManifest.xml.tpl  AndroidLibManifest.xml  AndroidReleaseAppManifest.xml.tpl  BUILD.bazel  Info.plist.tpl  StartActivity.kt.tpl  cli_main.cpp.tpl  ios_main.m.tpl  macos_main.m.tpl
bzl/valdi/npm/: BUILD.bazel  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repositories.bzl
bzl/valdi/snap_macros/: MODULE.bazel
bzl/valdi/source_set/: BUILD.bazel  source_set.bzl  utils.bzl
compiler/companion/: .gitignore  .prettierignore  BUILD.bazel  README.md  jest.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  webpack.config.js  webpack.dev.config.js
compiler/companion/remotedebug-ios-webkit-adapter/: .npmignore  BUILD.bazel  package-lock.json  package.json  tsconfig.json  tslint.json
compiler/companion/scripts/: run.sh  run_dev.sh  update_companion.sh
compiler/companion/src/: AST.spec.ts  AST.ts  BatchMinifier.ts  CodeInstrumentation.ts  CompanionServiceBase.ts  CompilerCompanion.ts  DebuggingProxy.ts  GenerateIds.spec.ts  GenerateIds.ts  GeneratedFileHeader.ts  IWorkspace.d.ts  Identifier.ts  JSXProcessor.spec.ts  JSXProcessor.ts  ObjectiveCWriter.ts  OutputWriter.ts  SourceMapUtils.ts  TSUtils.spec.ts  TSUtils.ts  Workspace.ts  WorkspaceStore.ts  ZombieKiller.ts  index.ts  index_tsnode.js  protocol.ts
compiler/companion/supported-locales/: .gitignore  .npmrc  package-lock.json  package.json  tsconfig.json
libs/dummy/: BUILD.bazel
libs/dummy/test/: Test.cpp
libs/image_toolbox/: BUILD.bazel  README.md
libs/utils/: BUILD.bazel
snap_drawing/: BUILD.bazel  README.md
snap_drawing/scripts/: run_benchmark.sh
snap_drawing/src/benchmark/: main.cpp
snap_drawing/src/demo/: SnapDrawingDemo.mm  SnapDrawingVideoEncoder.h  SnapDrawingVideoEncoder.mm
snap_drawing/test/src/: Compositor_Tests.cpp  DisplayList_Tests.cpp  DoubleTapGestureRecognizer_tests.cpp  DragGestureRecognizer_tests.cpp  DrawLooper_Tests.cpp  FlexboxLayer_tests.cpp  ImageBitmap_tests.cpp  ImageQueue_tests.cpp  Interpolator_Tests.cpp  Layer_tests.cpp  LongPressGestureRecognizer_tests.cpp  LottieLayer_tests.cpp  PinchGestureRecognizer_tests.cpp  RasterContext_tests.cpp  RasterDamageResolver_tests.cpp  RotateGestureRecognizer_tests.cpp  ScrollLayer_test.cpp  SingleTapGestureRecognizer_tests.cpp  TextLayout_Tests.cpp  TextShaperCache_tests.cpp  TouchDispatcher_tests.cpp  TouchGestureRecognizer_tests.cpp  VideoLayer_tests.cpp  WheelGestureRecognizer_tests.cpp  WordCachingTextShaper_tests.cpp
snap_drawing/test/utils/: DisplayListBuilder.cpp  DisplayListBuilder.hpp  TestBitmap.cpp  TestBitmap.hpp  TestDataUtils.cpp  TestDataUtils.hpp  TestGestureUtils.cpp  TestGestureUtils.hpp
src/: BUILD.bazel
src/platform-projects/android/: android_exports.lst  build_id_note_symbols.ld
tools/zstd/: BUILD.bazel  Dockerfile  build_zstd_linux.sh  build_zstd_macos.sh  build_zstd_within_environment.sh  rebuild_all.sh  zstdw
tsn/: BUILD.bazel  README.md  tsn.bzl
tsn/examples/: BUILD.bazel  tsconfig.json
tsn/examples/microbench/: README.md  microbench.js
tsn/examples/nbody/: nbody_example.ts
tsn/examples/richards/: richards.js
tsn/examples/stackoverflow_test/: stackoverflow.ts
tsn/main/: main.cpp
tsn/rtl/: BUILD.bazel  tsconfig.json
tsn/rtl/rtl/: tsn.ts
tsn/scripts/: compile.sh  compile_single.sh  ignored_test262.txt  refresh.sh
tsn/scripts/bazel/: test262_preprocess_test.sh  test262_run_test.sh
tsn/src/test262/: skip_list.json
tsn/src/tsn/: tsn.cpp  tsn.h
tsn/tests/: BUILD.bazel  tsconfig.json
tsn/tests/tsn_integration_tests/: arith_binary_operators.ts  arith_unary_operators.ts  arith_unary_operators_pros.ts  async_generator.ts  await.ts  backtrace.ts  binary_operators.ts  bitwise_operators.ts  capturing_closures.ts  classes.ts  classes_method_from_value.ts  classes_properties.ts  destructuring.ts  (+25 more)
valdi/bzl_project/: BUILD.bazel
valdi_core/: .gitignore  BUILD.bazel  README.md  djinni_compat.bzl  valdi_core.djinni
valdi_protobuf/: BUILD.bazel
valdi_protobuf/scripts/: generate_protos.sh
valdi_protobuf/test/: .gitattributes  DescriptorDatabase_tests.cpp  FieldMap_tests.cpp  Field_tests.cpp  FullyQualifiedName_tests.cpp  Message_tests.cpp
(+3942 files in other folders)
