load("//bzl/valdi:valdi_application.bzl", "valdi_application")
load("//bzl/valdi:valdi_exported_library.bzl", "valdi_exported_library")

valdi_application(
    name = "hello_world",
    android_activity_theme_name = "Theme.MyApp.Launch",
    android_app_icon_name = "app_icon",
    android_resource_files = glob(["app_assets/android/**"]),
    ios_app_icons = glob(["app_assets/ios/Icons.xcassets/**"]),
    ios_bundle_id = "com.snap.valdi.helloworld",
    ios_families = ["iphone"],
    root_component_path = "App@hello_world/src/HelloWorldApp",
    title = "Valdi Hello World",
    version = "1.0.0",
    deps = ["//apps/helloworld/src/valdi/hello_world"],
)

valdi_exported_library(
    name = "hello_world_export",
    ios_bundle_id = "com.snap.hello_world.lib",
    ios_bundle_name = "HelloWorld",
    deps = ["//apps/helloworld/src/valdi/hello_world"],
)
