load("//bzl/valdi:valdi_application.bzl", "valdi_application")
load("//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "managed_context_example",
    srcs = glob([
        "**/*.ts",
        "**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/valdi_modules/src/valdi/drawing",
        "//src/valdi_modules/src/valdi/valdi_navigation",
    ],
)

valdi_application(
    name = "managed_context_example_app",
    root_component_path = "App@managed_context_example/ManagedContextExample",
    title = "Valdi Managed Context Example",
    deps = [":managed_context_example"],
)
